
VDR 1.7.29

0.22	Updated EPG filter for 42E, canal sat (tid 1088), canal+ (tid 1060), CDS (veronica)
	Fix: Right month is now shown in recordings menu.
	Fix: multiple EPG languages on 1 transponder.
	Added some channels for 42E to group 3
	Updated channels.conf
	SmartwebTV timer handling added (No more restfulapi needed for timers)
	Info about audio/video in Infobox when playing Recording
	Update dutch tv/radio channels on 19E

	


0.21	Language in sepate file, link your lang_XXX.js to language.js to activate it.
	Updated EPG filter, (DVB-T defaults to German), added MTV transponder on 19E.
	Audio, subs etc settings are now stored on the box. So they are kept after reboot.
	OSD Time out can be set from settings.js
	Pause Live TV on Server
	Added a 'none' to audio prio settings, which restores the factory setting.
	Timer ADD/ Timer DEL is now possible by using SmartTVWeb (Show Timers still uses restfulapi) (No more patching of restfulapi is needed!)
	Instant REC now only records current program ( no EPG, no recording )
	Recordsmenu shows recording date/time
	Protection uses Timeout to reprotect.
	Protection of recordings based on group the channel is in.


0.20	Updated EPG filter
	SearchTimers Submenu.
	Channels updates
	In guideview you can have updates for all channels in view, was changed because it was too slow on 1910/1960 but 1963/1903 can handle it.
	Added PG & content info.
	fixed show double epg info (epg shortinfo = epg ext. info)
	timer to stop duplicate instant recordings.( Default 15 minutes)
	In recordings menu 0 rewinds recording to 0.


0.19	Added SleepTimer in menu 1 Settings. (Key is stopbutton)
	Timer menu OK shows same info as BLUE
	Updated EPG filter for MTV Transponder (Nick JR france, Nick NL)
	Channel group 0 : removed channels 30W, updated channels 28.8E 
	Show maps for first level submaps. <OK> to enter submap (Can be switched off in settings to keep old way of displaying)