@@ -84,7 +84,7 @@ channels[6039]="S23.5E-3-3208-7037";
 channelsnames[6040] = "HUSTLER HD-3D (S)";
 channels[6040]="S13.0E-318-15800-16933";
 channelsnames[6041] = "DARING TV (S)";
-channels[6041]="S13.0E-318-15800-16931";
+channels[6041]="S13.0E-318-13300-4960";
 channelsnames[6043]="Playboy TV (S)";
 channels[6043]="S13.0E-318-12100-7513";
 channelsnames[6044]="Blue Hustler (S)";
